--- a/Responsive Website/style.css
+++ b/Responsive Website/style.css
@@ -330,6 +330,8 @@ nav .fa {
   width: 100%;
   text-align: center;
   padding: 30px 0;
+  background: rgba(0, 0, 0, 0.7);
+  color: #fff;
 }
 .footer p {
   padding: 0 5px;
@@ -347,6 +349,7 @@ nav .fa {
   margin: 0 13px;
   cursor: pointer;
   padding: 13px 0;
+  font-size: 24px;
 }
 .fa-heart {
   color: #f44336;
