--- a/Responsive Website/style.css
+++ b/Responsive Website/style.css
@@ -330,16 +330,16 @@ nav .fa {
   width: 100%;
   text-align: center;
   padding: 30px 0;
-  background: rgba(0, 0, 0, 0.7);
-  color: #fff;
 }
 .footer p {
   padding: 0 5px;
+  color: #444;
 }
 .footer h4 {
   margin-bottom: 25px;
   margin-top: 20px;
   font-weight: 600;
+  color: #000;
 }
 .icons {
   margin-top: 22px;
@@ -353,4 +353,57 @@ nav .fa {
 }
 .fa-heart {
   color: #f44336;
+}
+
+/* ABOUT US PAGE */
+
+.sub-header {
+  height: 50vh;
+  width: 100%;
+  background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)),
+    url(img/background.jpg);
+  background-position: center;
+  background-size: cover;
+  text-align: center;
+  color: #fff;
+}
+.sub-header h1 {
+  margin-top: 100px;
+  font-size: 36px;
+}
+
+.about-us {
+  width: 80%;
+  margin: auto;
+  padding-top: 80px;
+  padding-bottom: 50px;
+}
+
+.about-col {
+  flex-basis: 48%;
+  padding: 30px 2px;
+}
+.about-col img {
+  width: 100%;
+}
+.about-col h1 {
+  padding-top: 0;
+  font-size: 48px;
+}
+.about-col p {
+  padding: 15px 0 25px;
+}
+
+.about-col a {
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+.red-btn {
+  border: 1px solid #f44336;
+  color: #f44336;
+  transition: 0.5s all;
+}
+.red-btn:hover {
+  color: #fff;
 }
